set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
file(GLOB CONTROL_HEADERS ${PROJECT_SOURCE_DIR}/include/Control/*.h)
file(GLOB CONTROL_CPPS *.CPP)
add_library(Controller STATIC ${CONTROL_HEADERS} ${CONTROL_CPPS})
target_link_libraries(Controller ${OPENSCENEGRAPH_LIBRARIES}  ${OSGDB_LIBRARIES} 
${OSGGA_LIBRARYIES} ${OSGVIEWER_LIBRARIES} ${OSGWIDGET_LIBRARIES} ${OSGQT_LIBRARIES} Qt5::Core)