set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/OSGRender/*.h)
file(GLOB SOURCE_FILES *.cpp)

add_library(OSGRender STATIC ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(OSGRender ${OPENSCENEGRAPH_LIBRARIES}  ${OSGDB_LIBRARIES} 
${OSGGA_LIBRARYIES} ${OSGVIEWER_LIBRARIES} ${OSGWIDGET_LIBRARIES} ${OSGQT_LIBRARIES} Qt5::Widgets Qt5::Core)